--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "ace-builds": "^1.4.8",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "react": "^16.13.1",
     "react-ace": "^8.1.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.14.1",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
