--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "ace-builds": "^1.4.8",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "react": "^16.13.1",
     "react-ace": "^8.1.0",
     "react-bootstrap": "^1.0.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
